// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/ATTRIBUTE.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";


package groundAlarm.protobuf;

message Transition {
extensions 7 to 107;

  optional ccsds_mal.protobuf.TIME onboardDate = 1;
  optional ccsds_mal.protobuf.TIME groundDate = 2;
  optional ccsds_mal.protobuf.ATTRIBUTE convertedValue = 3;
  optional ccsds_mal.protobuf.ATTRIBUTE extractedValue = 4;
  optional ccsds_mal.protobuf.ATTRIBUTE rawValue = 5;
  optional ccsds_mal.protobuf.STRING monitoringState = 6;
}
